crates/biome_cli/tests/snapshots/main_cases_indent_script_and_style/check_write_svelte_indent_is_idempotent.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write
```

## `biome.json`

```json
{
  "html": {
    "formatter": {
      "indentScriptAndStyle": true
    }
  }
}
```

## `file.svelte`

```svelte
<script lang="ts">
	const line1 = "fail";
	console.log(line1);
</script>

```

# Emitted Messages

```block
Checked 2 files in <TIME>. No fixes applied.
```
