crates/biome_cli/tests/snapshots/main_cases_indent_script_and_style/check_write_vue_indent_is_idempotent.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write
```

## `biome.json`

```json
{
  "html": {
    "formatter": {
      "indentScriptAndStyle": true
    }
  }
}
```

## `file.vue`

```vue
<script>
	const line1 = "fail";
	console.log(line1);
</script>
<template></template>

```

# Emitted Messages

```block
Checked 2 files in <TIME>. No fixes applied.
```
