crates/biome_cli/tests/snapshots/main_cases_indent_script_and_style/indent_svelte_by_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write
```

## `biome.json`

```json
{
  "html": {
    "formatter": {
      "indentScriptAndStyle": true
    }
  }
}
```

## `file.svelte`

```svelte
<script>
	import { something } from "file.svelte";
	statement();
</script>
<div></div>
```

# Emitted Messages

```block
Formatted 2 files in <TIME>. Fixed 2 files.
```
