crates/biome_cli/tests/snapshots/main_cases_indent_script_and_style/indent_svelte_by_default.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write
```

## `file.svelte`

```svelte
<script>
import { something } from "file.svelte";
statement();
</script>
<div></div>
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
