crates/biome_cli/tests/snapshots/main_cases_indent_script_and_style/indent_vue_by_cli.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write --html-formatter-indent-script-and-style=true
```

## `file.vue`

```vue
<script>
	import { something } from "file.vue";
	statement();
</script>
<template></template>
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
