crates/biome_cli/tests/snapshots/main_cases_indent_script_and_style/indent_vue_by_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write
```

## `biome.json`

```json
{
  "html": {
    "formatter": {
      "indentScriptAndStyle": true
    }
  }
}
```

## `file.vue`

```vue
<script>
	import { something } from "file.vue";
	statement();
</script>
<template></template>
```

# Emitted Messages

```block
Formatted 2 files in <TIME>. Fixed 2 files.
```
